--- a/styles/header.css
+++ b/styles/header.css
@@ -11,7 +11,7 @@
 }
 .left {
     width: 40%;
-    min-width:min-content;
+    /*min-width:min-content;*/
     font-family: 'Rubik';
     font-size: 32px;
     font-weight: 100;
@@ -19,21 +19,28 @@
     /*margin: 0px 0% 0% 0%;*/
     /*margin-left: 3%;*/
     /*transform: translateY(-5%);*/
-    /*border:solid 0.1px white;*/
-    clear: both;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 10px;
+    border:solid 0.1px blue;
+    /*clear: both;*/
+    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-left: 5%;
 }
 .middle {
-    width: 30%;
-    /*margin: -2%;*/
-    /*border:solid 0.1px white;*/
+    width: 25%;
+    /*height: 150px;*/
+    margin: 0;
+    /*border:solid 0.1px blue;*/
 }
 .right {
-    /*max-width: 355px;*/
+    width: 25%;
+    border:solid 0.1px blue;
+    text-align: center;
+    margin: 0;
 }
-#shiblino {
+.shiblino {
+    margin: 0;
+    /*margin-top: 3%;
+    margin-bottom: 3%;*/
     font-family: 'Inter';
     font-size: 42px;
     font-weight: 600;
@@ -41,37 +48,43 @@
     letter-spacing: 6px;
     border: solid 4px black;
     border-radius: 20px;
-    padding: 1.25% 1.25% 1.25% 1.65%;
+    padding: 5% 5.5% 5% 8%;
     background-color: aliceblue;
     /*box-shadow: 7px 7px 20px 0px rgba(1, 1, 1, 0.5);*/
     opacity: 0.7;
     /*max-width: max-content;*/
 }
-@media screen and (max-width: 800px) {
-    #shiblino{
-        margin-bottom: 30px;
+@media screen and (max-width: 1000px) {
+    .shiblino {
+        padding: 4% 4% 4% 6%;
     }
     .bhead {
-        /*display: inline-block;*/
+        text-align: center;
+        display: inline-block;
         width: 98%;
         padding: 0;
     }
     .middle {
-        display: none;
+        width: 0%;
+        height: 0%;
+        margin: 0%;
     }
     .left {
-        width: 98%;
+        width: 100%;
+        margin-left: 0%;
+        margin-right: 0%;
         font-size: 25px;
-        margin-bottom: 3%;
-        padding: 0;
+        margin-top: 5%;
+        margin-bottom: 0%;
         text-align: center;
-        margin-left: 0.5%;
-        padding-right: 0.5%;
+        font-size: 34px;
     }
     .right {
-        margin: auto;
-        text-align: center;
-        padding-left: 5%;
-        padding-right: 5%;
+        width: 99%;
+        margin-top: 0%;
+        margin-bottom: 5%;
+        opacity: 0.8;
+        padding: 0%;
+
     }
 }
