--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@
     /*display: none;*/
     box-shadow: 7px 7px 20px 0px rgba(1, 1, 1, 0.5);
     /*background-color: rgba(240, 240, 240, 0.400);*/
-    border:solid 0.1px rgb(197, 21, 21);
+    /*border:solid 0.1px rgb(197, 21, 21);*/
     text-align: left;
 }
 .bhead div {
@@ -19,7 +19,7 @@
     /*margin: 0px 0% 0% 0%;*/
     /*margin-left: 3%;*/
     /*transform: translateY(-5%);*/
-    border:solid 0.1px blue;
+    /*border:solid 0.1px blue;*/
     /*clear: both;*/
     margin-top: 3%;
     margin-bottom: 3%;
@@ -33,7 +33,7 @@
 }
 .right {
     width: 25%;
-    border:solid 0.1px blue;
+    /*border:solid 0.1px blue;*/
     text-align: center;
     margin: 0;
 }
@@ -57,6 +57,7 @@
 @media screen and (max-width: 1000px) {
     .shiblino {
         padding: 4% 4% 4% 6%;
+        opacity: 0.9;
     }
     .bhead {
         text-align: center;
@@ -75,7 +76,7 @@
         margin-right: 0%;
         font-size: 25px;
         margin-top: 5%;
-        margin-bottom: 0%;
+        margin-bottom: 3%;
         text-align: center;
         font-size: 34px;
     }
