--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,8 +7,8 @@ footer {
     font-weight: 100;
     font-display: swap;
     color: rgb(252, 248, 248);
-    box-shadow: 5px 5px 20px 3px rgba(255, 255, 255, 0.9);
-    background-color: rgba(31, 146, 108, 0.4);
+    /*box-shadow: 5px 5px 20px 3px rgba(255, 255, 255, 0.9);*/
+    background-color: rgba(1, 150, 10, 0.5);
 }
 
 /*footer p {
